--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -19,7 +19,8 @@
 
 {% for row in products %}
         <li>
-          <dt class="image"><img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" /><a class="shop">{{ row.web_name }}</a></dt>
+
+        <dt class="image"><img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" /><a class="shop" href="{{ webs[row.web_id].url |replace( { 'APImemberId': app.session.get('uid') } ) }}" target="_blank" >{{ row.web_name }}</a></dt>
           <dd class="clearfix">
             <p class="title">
            {% if app.session.get('uid') is defined %}
@@ -30,7 +31,7 @@
 
             <p class="price">￥{{ row.cur_price }}</p>
 
-            <p class="rebate">返利最高：<em>10%</em></p>
+            <p class="rebate">返利最高：<em>{{ webs[row.web_id].commission }}</em></p>
 
           </dd>
         </li>
