--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -10,19 +10,55 @@ body{ font-family: '微软雅黑','宋体'; font-size:12px; background-color:#F6
 .module{ border:1px solid #E0E0E0;}
 #header{ width:100%;}
 #header #topbar{ background-color:#F6F6F6; width:100%; border-bottom:1px solid #E0E0E0; height:30px; line-height:30px; color:#666;}
-#userbar{ float:right; overflow:hidden;}
+#userbar{ float:right; position:relative;}
 #userbar li{ float:left;}
 #userbar li.split { background: none repeat scroll 0 0 #CCC; color: #CCC; height: 12px; margin: 9px; width: 1px; overflow:hidden;}
 #userbar li a{ background:url(../images140307/iconImage.png) no-repeat; cursor:pointer;}
 #userbar li a.message{ padding-left: 20px; background-position: left 3px;}
-#userbar li a.personal{ background-position: right -23px; padding-right: 25px;}
+#userbar li a.personal{ background-position: 53px -23px; padding-right: 10px;}
+#userbar  #userFrame {
+    background-color: #FFFFFF;
+    border: 1px solid #e0e0e0;
+    display: none;
+    left: 0;
+    position: absolute;
+    top: 30px;
+    width: 100%;
+    z-index: 8000;
+}
+#userbar  #userFrame .userInfo {
+    background:url("../images140307/iconImage.png") no-repeat scroll 10px -447px;
+    border-bottom: 1px solid #EEEEEE;
+    margin-bottom: 5px;
+    padding: 5px 0 5px 33px;
+}
+#userbar  #userFrame ul.menu li {
+    line-height: 230%;
+	float:none;
+}
+#userbar  #userFrame ul.menu li a {
+    color: #666666;
+    display: block;
+    text-indent: 15px;
+    width: 100%;
+	background:none;
+}
+#userbar  #userFrame ul.menu li a:hover {
+    background-color: #F0F0F0;
+    text-decoration: none;
+}
+#userbar  #userFrame ul.menu li.logOut {
+    border-top: 1px solid #EEEEEE;
+    line-height: 250%;
+    margin-top: 5px;
+}
 #headerContent{ padding:15px 0; background-color:#FFF;}
 #headerContent #logo{ float:left;}
 #headerContent #search {border: 3px solid #EAEAEA; border-radius: 3px;float: left;height: 36px;margin-left:180px; background-color:#FFF;}
 #headerContent .seacherMenu{background: url("../images140307/iconImage.png") no-repeat scroll 41px -94px;float: left;height: 26px;line-height: 26px;padding: 5px 0px 5px 10px;position: relative; width: 45px;}
 #headerContent .form{float:left;}
-#headerContent #search .text {background-color: #FFFFFF;background-position: 0 -360px;background-repeat: repeat-x;color: #999999;font-size: 14px;line-height: 30px;padding: 5px;border: none;width: 460px;}
-#headerContent #search .button {background: none repeat scroll 0 0 #FF6B4F;border: medium none;color: #FFFFFF;font-size: 14px;font-weight: 700;height: 36px; width: 92px;margin:0;padding:0;}
+#headerContent #search .text {background-color: #FFFFFF;background-position: 0 -360px;background-repeat: repeat-x;color: #999999;font-size: 14px;line-height: 30px;padding: 5px;border: none;width: 460px; float:left; height:26px;}
+#headerContent #search .button {background: none repeat scroll 0 0 #FF6B4F;border: medium none;color: #FFFFFF;font-size: 14px;font-weight: 700;height: 36px; width: 92px;margin:0;padding:0; float:left;}
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
 #headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
 #nav{width:100%; height:40px; line-height:40px; background-color:#FF6B4F;}
@@ -34,3 +70,4 @@ body{ font-family: '微软雅黑','宋体'; font-size:12px; background-color:#F6
 #nav li.task ul li span{ right:0; margin-right:15px; position:absolute; top:0;}
 #nav li a{ color:#FFF;}
 #nav li.task a.taskBtn{ background: url("../images140307/iconImage.png") no-repeat scroll 15px -157px; padding-left: 40px;}
+#nav li.task em{background-color: #FFFFFF;border-radius: 6px;color: #65B1EE;display: inline-block;font-size: 15px;line-height: 100%;margin: 0 8px;padding: 1px 5px;}
