--- a/src/Jili/EmarBundle/Resources/views/base140307.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/base140307.html.twig
@@ -24,6 +24,15 @@
         <li><a class="message">新消息(+2)</a></li>
         <li class="split">|</li>
         <li><a class="personal">个人中心</a></li>
+        <div id="userFrame">
+            <div class="userInfo"><p>Uplee</p></div>
+            <ul class="menu">
+                <li><a href="/user/info">个人信息</a></li>
+                <li><a href="http://www.91jili.com/user/adtaste/0">我的任务历史</a></li>
+                <li><a href="http://www.91jili.com/user/exchange/0/1">我的兑换历史</a></li>
+                <li class="logOut"><a href="/user/loginOut">退出</a></li>
+            </ul>
+        </div>
       </ul>
     </div>
   </div>
@@ -48,7 +57,7 @@
   <div id="nav">
     <div class="page clearfix">
       <ul>
-        <li class="task"> <a class="taskBtn" href="#">我的任务列表</a>
+        <li class="task"> <a class="taskBtn" href="#">我的任务列表</a><em>3</em>
           <ul>
             <li><a href="#">每日签到<span>1米粒</span></a></li>
             <li><a href="#">小鸡找米<span>最高588米粒</span></a></li>
