--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -634,6 +634,31 @@
        </TABLE>
          
           
+      <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background={{ asset('images/admin/menu_bt.jpg')}}><A 
+            class=menuParent onclick=expand(18) 
+            href="javascript:void(0);">Emar商家管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child18 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('admin_emar_websites') }}" 
+            target=main>列表/编辑</A></TD></TR>
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('admin_emar_websites_new') }}" 
+            target=main>添加</A></TD></TR>
+        
+        <TR height=4>
+          <TD colSpan=2></TD></TR></TABLE>
       </BODY></HTML>
     
 
