design pages added

--- a/web/css140307/recommend.css
+++ b/web/css140307/recommend.css
@@ -13,3 +13,34 @@
 .recommend .prevBtn, .recommend .nextBtn{ display:inline-block; position:absolute; background-image:url(../images140307/iconImage.png); width:15px; height:23px; top:85px; cursor:pointer;}
 .recommend .prevBtn{ background-position:0 -300px; left:20px;}
 .recommend .nextBtn{ background-position:0 -340px; right:20px;}
+
+.sidebarRecommend h2 {font-size: 16px; line-height: 40px;}
+.sidebarRecommend ul li{ background-color:#FFF; border:1px solid #DDD; margin:0 0 15px 0; padding:15px; padding-right:0; line-height:160%;}
+.sidebarRecommend ul li dt{ float:left; margin-right:10px; width:150px; height:150px;}
+.sidebarRecommend ul li dd{ float:left; width:115px;}
+.sidebarRecommend ul li p.title{ color:#666; height:55px; overflow:hidden; width:100%; margin-bottom:10px;}
+.sidebarRecommend ul li p.price{ font-size:15px; font-weight:bold; color:#ea4b11; margin:5px 0;}
+.sidebarRecommend ul li p.shop{color:#ea4b11;}
+.sidebarRecommend ul li p.rebate{ color:#999;}
+.sidebarRecommend ul li p.rebate em{color:#ea4b11;}
+
+.miniRecommend{ background-color:#FFF; color:#999999; position:relative;}
+.miniRecommend .shade{ width:150px; margin:20px auto; height:200px; overflow:hidden; position:relative;}
+.miniRecommend ul{ width:100%; position:absolute; left:0; top:0;}
+.miniRecommend ul li{ float:left; height:200px;}
+.miniRecommend ul li .img{ position:relative; margin: 0 0 10px 0;}
+.miniRecommend ul li .title{ position:absolute; left:0; bottom:0; color:#FFF; padding:5px; overflow:hidden; padding: 7px 10px; line-height:18px; background-color:rgba(0,0,0,.5);}
+.miniRecommend ul li dt{ float:left;}
+.miniRecommend ul li dd{font-size:15px; font-weight:bold; color:#ea4b11; float:right;}
+.miniRecommend ul li .rebate em{color:#ea4b11;}
+.miniRecommend .prevBtn, .miniRecommend .nextBtn{ display:inline-block; position:absolute; font-size:0; background-image:url(../images140307/iconImage.png); width:15px; height:23px; top:85px; cursor:pointer;}
+.miniRecommend .prevBtn{ background-position:0 -300px; left:5px;}
+.miniRecommend .nextBtn{ background-position:0 -340px; right:5px;}
+
+.searchRecommend{ margin-bottom:20px;}
+.searchRecommend li{ float:left; margin-right:20px; background-color:#FFF; box-shadow:0px 1px 1px #DDD;}
+.searchRecommend li.end{ margin-right:0;}
+.searchRecommend li dd{font-size:12px; padding:0 10px 10px 10px; color:#999999;}
+.searchRecommend li dd p{ line-height:150%;}
+.searchRecommend li .price{ font-size:14px; color:#ea4b11;}
+.searchRecommend li .rebate em{color:#ea4b11;}
