--- a/web/css140307/commodity.css
+++ b/web/css140307/commodity.css
@@ -1,15 +1,22 @@
 .commodityList{}
-.commodityList h1{ font-size:16px; line-height:40px; color:#ea4b11;}
+.commodityList h1{ font-size:16px; line-height:40px;}
 .commodityList h1 span{ font-size:12px; margin-left:10px;}
 .commodityList .classifyShop{ margin:10px 0;}
-.commodityList .classifyShop dt{ width:70px; line-height:23px;}
-.commodityList .classifyShop dd{ width:820px; padding-right:40px; position:relative; height: 28px; overflow:hidden;}
-.commodityList .classifyShop dd a{ display:inline-block; margin-right:10px; padding:3px 10px; color:#000; margin-bottom:5px;}
-.commodityList .classifyShop dd a:hover ,.commodityList .classifyShop dd a.hover{ background-color:#ea4b11; color:#FFF;}
+.commodityList .classifyShop dt{ width:70px; line-height:23px; margin-bottom:10px;}
+.commodityList .classifyShop dd{ width:820px; padding-right:40px; position:relative; margin-bottom:10px; height: 28px; overflow:hidden;}
+.commodityList .classifyShop dd a{ display:inline-block; margin-right:10px; padding:3px 10px; color:#000; margin-bottom:5px; border-radius:2px;}
+.commodityList .classifyShop dd a.sort{ background-color:#FFF; border:1px solid #CCC;}
+.commodityList .classifyShop dd a.sort.arrowUp{ background-image:url(../images140307/iconImage.png); background-repeat:no-repeat; background-position: 87px -493px; padding-right:20px;}
+.commodityList .classifyShop dd a.sort.arrowDown{ background-image:url(../images140307/iconImage.png); background-repeat:no-repeat; background-position: 87px -533px; padding-right:20px;}
+.commodityList .classifyShop dd a:hover ,.commodityList .classifyShop dd a.hover,.classifyShop dd a.sort.active{ background-color:#ea4b11; color:#FFF;}
 .commodityList .classifyShop dd a.unfoldBtn{ position:absolute; padding:0; right:0; top:5px; font-size:0; width:14px; height:14px; background: url("../images140307/iconImage.png") repeat scroll 0 -380px; cursor:pointer;}
 .commodityList .classifyShop dd a.unfoldBtn.already{ background-position:0 -420px;}
+.commodityList .classifyShop dd div.price{ display:inline-block; background-color:#FFF; border:1px solid #CCC; padding:3px 9px; border-radius:2px; margin-right:3px;}
+.commodityList .classifyShop dd div.price.mr0{ margin-right:0;}
+.commodityList .classifyShop dd div.price .price-input{ border:none; width:30px;}
+.commodityList .classifyShop dd .price-btn{ background-color:#F2F2F2; margin-right:10px; padding:3px 10px; color:#000; margin-bottom:5px; border-radius:2px; border: 1px solid #CCCCCC;}
 .commodityList ul.commodityUl{ background-color:#FFF; padding:5px 0 5px 4px;}
-.commodityList ul.commodityUl li{ width:200px; float:left; padding:15px; padding-right:0;}
+.commodityList ul.commodityUl li{ width:200px; float:left; padding:15px;}
 .commodityList ul.commodityUl li:hover{ box-shadow:0 0 3px #CCC;}
 .commodityList ul.commodityUl li dt{ width:200px; height:200px; overflow:hidden; position:relative;}
 .commodityList ul.commodityUl li dt a.shop{ background-color: rgba(255, 255, 255, 0.75); bottom: 5px; color: #000000; display: inline-block; left: 5px; padding: 2px 5px; position: absolute; cursor:pointer;}
@@ -20,13 +27,3 @@
 .commodityList ul.commodityUl li dd p.price{ color:#ea4b11; font-size:15px; font-weight:bold; float:left;}
 .commodityList ul.commodityUl li dd p.rebate{ float:right; color:#999; margin-top:3px;}
 .commodityList ul.commodityUl li dd p.rebate em{ color:#ea4b11;}
-
-.sidebarCommodity h2 {font-size: 16px; line-height: 40px;}
-.sidebarCommodity ul li{ background-color:#FFF; border:1px solid #DDD; margin:0 0 15px 0; padding:15px; padding-right:0; line-height:160%;}
-.sidebarCommodity ul li dt{ float:left; margin-right:10px; width:150px; height:150px;}
-.sidebarCommodity ul li dd{ float:left; width:115px;}
-.sidebarCommodity ul li p.title{ color:#666; height:55px; overflow:hidden; width:100%; margin-bottom:10px;}
-.sidebarCommodity ul li p.price{ font-size:15px; font-weight:bold; color:#ea4b11; margin:5px 0;}
-.sidebarCommodity ul li p.shop{color:#ea4b11;}
-.sidebarCommodity ul li p.rebate{ color:#999;}
-.sidebarCommodity ul li p.rebate em{color:#ea4b11;}
