Upload the shared

--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve.html.twig
@@ -13,7 +13,10 @@
 {% block page_main %}
 <!-- content start  -->
   <div class="sidebar w204 fl">
+    <div class="module categorys">
+      <h3>所有商品分类</h3>
       {% include('JiliEmarBundle:Product:category.html.twig') %}
+     </div>
   </div>
 
 
