--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_page.html.twig
@@ -17,7 +17,11 @@
             <p class="shop">{{ row.web_name }}</p>
           </div>
           <div class="dd">
-            <p class="title">{{ row.web_name }} </p>
+        {% if websites_infos[row.web_id] is defined %}
+            <p class="title">{{  websites_infos[row.web_id] }} </p>
+        {% else %}
+            <p class="title">{{  row.web_name }} </p>
+        {% endif %}
             <p class="shopMore"><a href="{{ path( 'jili_emar_websites_detail', {'wid' : row.web_id })  }}">查看返利详情>></a></p>
           </div>
           <div class="dc">
